feat: 하이퍼링크 스타일 추가, 링크 색상 변경

--- a/src/assets/style/base/color.scss
+++ b/src/assets/style/base/color.scss
@@ -60,7 +60,7 @@ $error: $red600;
 $info: $gray600;
 $secondary: $orange600;
 $yellow: $yellow600;
-$link: $blue600;
+$link: #006beb;
 
 $border-color: $gray200;
 $input-border-color: $gray250; // Input, Select, Textarea, TextField
