--- a/src/assets/style/base/fonts.scss
+++ b/src/assets/style/base/fonts.scss
@@ -5,10 +5,12 @@ $web-font-family:
   'Trebuchet MS',
   sans-serif;
 $root: 'https://cdn.comento.kr/fonts/pretendard/';
+$root2: 'https://comento-s3-bucket.s3.ap-northeast-2.amazonaws.com/fonts/pretendard/';
 
 @font-face {
   font-family: 'Pretendard';
-  src: url($root + 'Pretendard-Light.subset.woff2') format('woff2'),
+  src: url($root2 + 'Pretendard-Light.subset.woff2') format('woff2'),
+       url($root + 'Pretendard-Light.subset.woff2') format('woff2'),
        url($root + 'Pretendard-Light.subset.woff') format('woff'),
        url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Light.woff') format('woff');
   font-weight: 300;
@@ -18,7 +20,8 @@ $root: 'https://cdn.comento.kr/fonts/pretendard/';
 
 @font-face {
   font-family: 'Pretendard';
-  src: url($root + 'Pretendard-Regular.subset.woff2') format('woff2'),
+  src: url($root2 + 'Pretendard-Regular.subset.woff2') format('woff2'),
+       url($root + 'Pretendard-Regular.subset.woff2') format('woff2'),
        url($root + 'Pretendard-Regular.subset.woff') format('woff'),
        url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
   font-weight: 400;
@@ -28,7 +31,8 @@ $root: 'https://cdn.comento.kr/fonts/pretendard/';
 
 @font-face {
   font-family: 'Pretendard';
-  src: url($root + 'Pretendard-Medium.subset.woff2') format('woff2'),
+  src: url($root2 + 'Pretendard-Medium.subset.woff2') format('woff2'),
+       url($root + 'Pretendard-Medium.subset.woff2') format('woff2'),
        url($root + 'Pretendard-Medium.subset.woff') format('woff'),
        url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Medium.woff') format('woff');
   font-weight: 500;
@@ -38,7 +42,8 @@ $root: 'https://cdn.comento.kr/fonts/pretendard/';
 
 @font-face {
   font-family: 'Pretendard';
-  src: url($root + 'Pretendard-SemiBold.subset.woff2') format('woff2'),
+  src: url($root2 + 'Pretendard-SemiBold.subset.woff2') format('woff2'),
+       url($root + 'Pretendard-SemiBold.subset.woff2') format('woff2'),
        url($root + 'Pretendard-SemiBold.subset.woff') format('woff'),
        url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-SemiBold.woff') format('woff');
   font-weight: 600;
