--- a/src/assets/style/base/fonts.scss
+++ b/src/assets/style/base/fonts.scss
@@ -4,14 +4,14 @@ $web-font-family:
   'Helvetica Neue', Helvetica, Arial,
   'Trebuchet MS',
   sans-serif;
-$root: 'https://cdn.comento.kr/fonts/pretendard/';
-$root2: 'https://comento-s3-bucket.s3.ap-northeast-2.amazonaws.com/fonts/pretendard/';
+$root: 'https://comento-s3-bucket.s3.ap-northeast-2.amazonaws.com/fonts/pretendard/';
+$rootCDN: 'https://cdn.comento.kr/fonts/pretendard/';
 
 @font-face {
   font-family: 'Pretendard';
-  src: url($root2 + 'Pretendard-Light.subset.woff2') format('woff2'),
-       url($root + 'Pretendard-Light.subset.woff2') format('woff2'),
-       url($root + 'Pretendard-Light.subset.woff') format('woff'),
+  src: url($root + 'Pretendard-Light.subset.woff2') format('woff2'),
+       url($rootCDN + 'Pretendard-Light.subset.woff2') format('woff2'),
+       url($rootCDN + 'Pretendard-Light.subset.woff') format('woff'),
        url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Light.woff') format('woff');
   font-weight: 300;
   font-style: normal;
@@ -20,9 +20,9 @@ $root2: 'https://comento-s3-bucket.s3.ap-northeast-2.amazonaws.com/fonts/pretend
 
 @font-face {
   font-family: 'Pretendard';
-  src: url($root2 + 'Pretendard-Regular.subset.woff2') format('woff2'),
-       url($root + 'Pretendard-Regular.subset.woff2') format('woff2'),
-       url($root + 'Pretendard-Regular.subset.woff') format('woff'),
+  src: url($root + 'Pretendard-Regular.subset.woff2') format('woff2'),
+       url($rootCDN + 'Pretendard-Regular.subset.woff2') format('woff2'),
+       url($rootCDN + 'Pretendard-Regular.subset.woff') format('woff'),
        url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
@@ -31,9 +31,9 @@ $root2: 'https://comento-s3-bucket.s3.ap-northeast-2.amazonaws.com/fonts/pretend
 
 @font-face {
   font-family: 'Pretendard';
-  src: url($root2 + 'Pretendard-Medium.subset.woff2') format('woff2'),
-       url($root + 'Pretendard-Medium.subset.woff2') format('woff2'),
-       url($root + 'Pretendard-Medium.subset.woff') format('woff'),
+  src: url($root + 'Pretendard-Medium.subset.woff2') format('woff2'),
+       url($rootCDN + 'Pretendard-Medium.subset.woff2') format('woff2'),
+       url($rootCDN + 'Pretendard-Medium.subset.woff') format('woff'),
        url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Medium.woff') format('woff');
   font-weight: 500;
   font-style: normal;
@@ -42,9 +42,9 @@ $root2: 'https://comento-s3-bucket.s3.ap-northeast-2.amazonaws.com/fonts/pretend
 
 @font-face {
   font-family: 'Pretendard';
-  src: url($root2 + 'Pretendard-SemiBold.subset.woff2') format('woff2'),
-       url($root + 'Pretendard-SemiBold.subset.woff2') format('woff2'),
-       url($root + 'Pretendard-SemiBold.subset.woff') format('woff'),
+  src: url($root + 'Pretendard-SemiBold.subset.woff2') format('woff2'),
+       url($rootCDN + 'Pretendard-SemiBold.subset.woff2') format('woff2'),
+       url($rootCDN + 'Pretendard-SemiBold.subset.woff') format('woff'),
        url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-SemiBold.woff') format('woff');
   font-weight: 600;
   font-style: normal;
