fix: cors 오류로 font root 수정 (#924)
* fix: cors 오류로 font root 수정

* fix: root, rootCDN 으로 수정

* fix: rootCDN 삭제

--- a/src/assets/style/base/fonts.scss
+++ b/src/assets/style/base/fonts.scss
@@ -4,12 +4,11 @@ $web-font-family:
   'Helvetica Neue', Helvetica, Arial,
   'Trebuchet MS',
   sans-serif;
-$root: 'https://cdn.comento.kr/fonts/pretendard/';
+$root: 'https://comento-s3-bucket.s3.ap-northeast-2.amazonaws.com/fonts/pretendard/';
 
 @font-face {
   font-family: 'Pretendard';
   src: url($root + 'Pretendard-Light.subset.woff2') format('woff2'),
-       url($root + 'Pretendard-Light.subset.woff') format('woff'),
        url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Light.woff') format('woff');
   font-weight: 300;
   font-style: normal;
@@ -19,7 +18,6 @@ $root: 'https://cdn.comento.kr/fonts/pretendard/';
 @font-face {
   font-family: 'Pretendard';
   src: url($root + 'Pretendard-Regular.subset.woff2') format('woff2'),
-       url($root + 'Pretendard-Regular.subset.woff') format('woff'),
        url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
@@ -29,7 +27,6 @@ $root: 'https://cdn.comento.kr/fonts/pretendard/';
 @font-face {
   font-family: 'Pretendard';
   src: url($root + 'Pretendard-Medium.subset.woff2') format('woff2'),
-       url($root + 'Pretendard-Medium.subset.woff') format('woff'),
        url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Medium.woff') format('woff');
   font-weight: 500;
   font-style: normal;
@@ -39,7 +36,6 @@ $root: 'https://cdn.comento.kr/fonts/pretendard/';
 @font-face {
   font-family: 'Pretendard';
   src: url($root + 'Pretendard-SemiBold.subset.woff2') format('woff2'),
-       url($root + 'Pretendard-SemiBold.subset.woff') format('woff'),
        url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-SemiBold.woff') format('woff');
   font-weight: 600;
   font-style: normal;
