feat: gray050 컬러 추가

--- a/src/assets/style/base/color.scss
+++ b/src/assets/style/base/color.scss
@@ -11,6 +11,7 @@ $gray300: #CFD4D7;
 $gray250: #E1E4E6;
 $gray200: #EAECEE;
 $gray100: #F3F4F5;
+$gray050: #F7F8F8;
 $gray000: #FCFCFC;
 $white: #FFFFFF;
 
