--- a/src/assets/style/base/fonts.scss
+++ b/src/assets/style/base/fonts.scss
@@ -4,11 +4,16 @@ $web-font-family:
   'Helvetica Neue', Helvetica, Arial,
   'Trebuchet MS',
   sans-serif;
-$root: 'https://comento-s3-bucket.s3.ap-northeast-2.amazonaws.com/fonts/pretendard/';
+$s3-root: 'https://comento-s3-bucket.s3.ap-northeast-2.amazonaws.com/';
+$cdn-root: 'https://cdn.comento.kr/';
+$font-path: 'fonts/pretendard/';
+$s3-font-url: $s3-root + $font-path;
+$cdn-font-url: $cdn-root + $font-path;
 
 @font-face {
   font-family: 'Pretendard';
-  src: url($root + 'Pretendard-Light.subset.woff2') format('woff2'),
+  src: url($cdn-font-url + 'Pretendard-Light.subset.woff2') format('woff2'),
+       url($s3-font-url + 'Pretendard-Light.subset.woff2') format('woff2'),
        url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Light.woff') format('woff');
   font-weight: 300;
   font-style: normal;
@@ -17,7 +22,8 @@ $root: 'https://comento-s3-bucket.s3.ap-northeast-2.amazonaws.com/fonts/pretenda
 
 @font-face {
   font-family: 'Pretendard';
-  src: url($root + 'Pretendard-Regular.subset.woff2') format('woff2'),
+  src: url($cdn-font-url + 'Pretendard-Regular.subset.woff2') format('woff2'),
+       url($s3-font-url + 'Pretendard-Regular.subset.woff2') format('woff2'),
        url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
@@ -26,7 +32,8 @@ $root: 'https://comento-s3-bucket.s3.ap-northeast-2.amazonaws.com/fonts/pretenda
 
 @font-face {
   font-family: 'Pretendard';
-  src: url($root + 'Pretendard-Medium.subset.woff2') format('woff2'),
+  src: url($cdn-font-url + 'Pretendard-Medium.subset.woff2') format('woff2'),
+       url($s3-font-url + 'Pretendard-Medium.subset.woff2') format('woff2'),
        url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Medium.woff') format('woff');
   font-weight: 500;
   font-style: normal;
@@ -35,7 +42,8 @@ $root: 'https://comento-s3-bucket.s3.ap-northeast-2.amazonaws.com/fonts/pretenda
 
 @font-face {
   font-family: 'Pretendard';
-  src: url($root + 'Pretendard-SemiBold.subset.woff2') format('woff2'),
+  src: url($cdn-font-url + 'Pretendard-SemiBold.subset.woff2') format('woff2'),
+       url($s3-font-url + 'Pretendard-SemiBold.subset.woff2') format('woff2'),
        url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-SemiBold.woff') format('woff');
   font-weight: 600;
   font-style: normal;
