fix: 연산 로직에 calc 함수 추가

--- a/src/assets/style/base/mixins.scss
+++ b/src/assets/style/base/mixins.scss
@@ -3,7 +3,7 @@
 @import "functions";
 
 @mixin trans-font-size($size, $line-height, $math: round) {
-  $line-height-percent: $line-height / 100;
+  $line-height-percent: calc($line-height / 100);
   font-size: $size;
   @if $math == 'round' {
     line-height: round($size * $line-height-percent);
