fix: 연산 로직 변수말고 직접 할당하도록 변경
도저히 방법을 찾지 못하여 1보 후퇴..

--- a/src/assets/style/base/mixins.scss
+++ b/src/assets/style/base/mixins.scss
@@ -3,12 +3,11 @@
 @import "functions";
 
 @mixin trans-font-size($size, $line-height, $math: round) {
-  $line-height-percent: $line-height / 100;
   font-size: $size;
   @if $math == 'round' {
-    line-height: round($size * $line-height-percent);
+    line-height: round($size * $line-height / 100);
   } @else if $math == 'floor' {
-    line-height: floor($size * $line-height-percent);
+    line-height: floor($size * $line-height / 100);
   }
 }
 
