refactor: vue2-datepicker import 경로 변경
-

--- a/src/assets/style/datePicker/datePicker.scss
+++ b/src/assets/style/datePicker/datePicker.scss
@@ -6,5 +6,5 @@ $input-border-color: $input-border-color;
 $input-hover-border-color: $gray400;
 $disabled-background-color: $gray000;
 
-@import '~vue2-datepicker/scss/index.scss';
+@import 'vue2-datepicker/scss/index.scss';
 @import 'datePicker.init';
