feat: hide-scrollbar 유틸 함수 추가

--- a/src/assets/style/base/mixins.scss
+++ b/src/assets/style/base/mixins.scss
@@ -367,3 +367,10 @@
   }
 }
 
+@mixin hide-scrollbar {
+  // 크롬, 사파리, 오페라, 엣지
+  &::-webkit-scrollbar {
+    display: none;
+  }
+  scrollbar-width: none; // 파이어폭스
+}
