fix: 헤더 내 탭의 divider(border-bottom) 색을 변경

--- a/src/assets/style/base/color.scss
+++ b/src/assets/style/base/color.scss
@@ -62,6 +62,7 @@ $info: $gray600;
 $secondary: $orange600;
 $yellow: $yellow600;
 $link: #006beb;
+$light-gray: $gray100;
 
 $border-color: $gray200;
 $input-border-color: $gray250; // Input, Select, Textarea, TextField
