feat: 가변 다이나믹 서브셋 글꼴 적용

--- a/src/assets/style/base/fonts.scss
+++ b/src/assets/style/base/fonts.scss
@@ -1,51 +1,3 @@
-$web-font-family:
-  'Pretendard',
-  'Apple SD Gothic Neo',
-  'Helvetica Neue', Helvetica, Arial,
-  'Trebuchet MS',
-  sans-serif;
-$s3-root: 'https://comento-s3-bucket.s3.ap-northeast-2.amazonaws.com/';
-$cdn-root: 'https://cdn.comento.kr/';
-$font-path: 'fonts/pretendard/';
-$s3-font-url: $s3-root + $font-path;
-$cdn-font-url: $cdn-root + $font-path;
-
-@font-face {
-  font-family: 'Pretendard';
-  src: url($cdn-font-url + 'Pretendard-Light.subset.woff2') format('woff2'),
-       url($s3-font-url + 'Pretendard-Light.subset.woff2') format('woff2'),
-       url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Light.woff') format('woff');
-  font-weight: 300;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Pretendard';
-  src: url($cdn-font-url + 'Pretendard-Regular.subset.woff2') format('woff2'),
-       url($s3-font-url + 'Pretendard-Regular.subset.woff2') format('woff2'),
-       url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Pretendard';
-  src: url($cdn-font-url + 'Pretendard-Medium.subset.woff2') format('woff2'),
-       url($s3-font-url + 'Pretendard-Medium.subset.woff2') format('woff2'),
-       url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Medium.woff') format('woff');
-  font-weight: 500;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Pretendard';
-  src: url($cdn-font-url + 'Pretendard-SemiBold.subset.woff2') format('woff2'),
-       url($s3-font-url + 'Pretendard-SemiBold.subset.woff2') format('woff2'),
-       url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-SemiBold.woff') format('woff');
-  font-weight: 600;
-  font-style: normal;
-  font-display: swap;
-}
+// https://github.com/orioncactus/pretendard 참고
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css");
+$web-font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
