--- a/src/assets/style/base/init.scss
+++ b/src/assets/style/base/init.scss
@@ -48,6 +48,8 @@ html {
 
 body {
   @include selection($body-selection); // 드래그 색상
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 body, header, footer, section, article, aside, div {
