feat: 050 컬러 추가

--- a/src/assets/style/base/color.scss
+++ b/src/assets/style/base/color.scss
@@ -2,57 +2,62 @@
 $black: #000000;
 $gray900: #040505;
 $gray850: #202325;
-$gray800: #3C4144;
-$gray700: #595F63;
-$gray600: #767D82;
-$gray500: #949BA0;
-$gray400: #ADB3B8;
-$gray300: #CFD4D7;
-$gray250: #E1E4E6;
-$gray200: #EAECEE;
-$gray100: #F3F4F5;
-$gray050: #F7F8F8;
-$gray000: #FCFCFC;
-$white: #FFFFFF;
+$gray800: #3c4144;
+$gray700: #595f63;
+$gray600: #767d82;
+$gray500: #949ba0;
+$gray400: #adb3b8;
+$gray300: #cfd4d7;
+$gray250: #e1e4e6;
+$gray200: #eaecee;
+$gray100: #f3f4f5;
+$gray050: #f7f8f8;
+$gray000: #fcfcfc;
+$white: #ffffff;
 
 // Primary
 // Blue
-$blue800: #1B5192;
-$blue600: #2A7DE1;
-$blue400: #6EA7EB;
-$blue100: #D4E5F9;
-$blue000: #F7FAFE;
+$blue800: #1b5192;
+$blue600: #2a7de1;
+$blue400: #6ea7eb;
+$blue100: #d4e5f9;
+$blue050: #e9f2fc;
+$blue000: #f7fafe;
 
 // Success
 // Green
 $green800: #038542;
-$green600: #04CD66;
-$green400: #54DD97;
-$green100: #CDF5E0;
-$green000: #F5FDF9;
+$green600: #04cd66;
+$green400: #54dd97;
+$green100: #cdf5e0;
+$green050: #e5faef;
+$green000: #f5fdf9;
 
 // Error
 // Red
 $red800: #971818;
-$red600: #E92525;
-$red400: #F06B6B;
-$red100: #FBD3D3;
-$red000: #FEF6F6;
+$red600: #e92525;
+$red400: #f06b6b;
+$red100: #fbd3d3;
+$red050: #fde8e8;
+$red000: #fef6f6;
 
 // Secondary
 // Orange
-$orange800: #CF5310;
-$orange600: #EE7E41;
-$orange400: #F3A77E;
-$orange100: #FCE5D9;
-$orange000: #FEFAF7;
+$orange800: #cf5310;
+$orange600: #ee7e41;
+$orange400: #f3a77e;
+$orange100: #fce5d9;
+$orange050: #fdf2eb;
+$orange000: #fefaf7;
 
 // Secondary
 // Yellow
-$yellow600: #FFD700;
-$yellow400: #FFE452;
-$yellow100: #FFF7CC;
-$yellow000: #FFFDF5;
+$yellow600: #ffd700;
+$yellow400: #ffe452;
+$yellow100: #fff7cc;
+$yellow050: #fffbe5;
+$yellow000: #fffdf5;
 
 $primary: $blue600;
 $light-primary: $blue100;
