feat: error -> accent

--- a/src/assets/style/base/color.scss
+++ b/src/assets/style/base/color.scss
@@ -33,7 +33,7 @@ $green100: #cdf5e0;
 $green050: #e5faef;
 $green000: #f5fdf9;
 
-// Error
+// Accent
 // Red
 $red800: #971818;
 $red600: #e92525;
@@ -62,7 +62,7 @@ $yellow000: #fffdf5;
 $primary: $blue600;
 $light-primary: $blue100;
 $success: $green600;
-$error: $red600;
+$accent: $red600;
 $info: $gray600;
 $secondary: $orange600;
 $yellow: $yellow600;
